added "integration_type": "device" to manifest.json to show the device in the AutoDashboards

--- a/custom_components/tibber_graphapi/manifest.json
+++ b/custom_components/tibber_graphapi/manifest.json
@@ -7,6 +7,7 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/marq24/ha-tibber-graphapi/blob/master/README.md",
+  "integration_type": "device",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/marq24/ha-tibber-graphapi/issues",
   "version": "2024.12.0"
